add README Apr 24 2025

--- a/Print_domality_info.ipynb
+++ b/Print_domality_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b75db498-5e8d-4dab-9e01-7afebb54706a",
    "metadata": {},
    "outputs": [],
@@ -96,6 +96,55 @@
     "list_folders(root_folder, output_txt)\n",
     "\n",
     "print(f\"文件夹层级结构已写入 {output_txt}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f01e031-4ff2-458b-956b-fa25c3bfda8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a07a7fcd-48d4-4100-bfae-fd7da281b650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_files(directory, output_file):\n",
+    "    file_list = []\n",
+    "    for root, _, files in os.walk(directory):\n",
+    "        file_list.extend(files)\n",
+    "    \n",
+    "    # 按字母顺序排序，忽略大小写\n",
+    "    file_list.sort(key=lambda x: x.lower())\n",
+    "    \n",
+    "    with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "        for file in file_list:\n",
+    "            f.write(f\"{file}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "32c5b358-542d-4336-b285-e6660a1bbe09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "所有文件名已保存到 C:\\Users\\ajhz839\\workwork\\Data\\20240725_post_CCRT_9_output.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_path = r'C:\\Users\\ajhz839\\workwork\\Data\\NIfTI\\20221004_36477104_KHH\\20240725_post_CCRT_9'\n",
+    "output_path = r\"C:\\Users\\ajhz839\\workwork\\Data\\20240725_post_CCRT_9_output.txt\"\n",
+    "list_files(folder_path, output_path)\n",
+    "print(f\"所有文件名已保存到 {output_path}\")"
    ]
   }
  ],
